[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[features]
test_file_input = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14"
md-5 = "0.10"
regex = "1.11"
rstest = "0.25"
serde_json = "1.0"
show-option = "0.2"
unindent = "0.2"
